objects/ssot__PartyExpense__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExpenseRecurrenceInterval__c</fullName>
        <label>Expense Recurrence Interval</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpenseStatus__c</fullName>
        <label>Expense Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpenseType__c</fullName>
        <label>Expense Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Expense Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSelfPaid__c</fullName>
        <label>Is Self Paid</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyExpense_PayeeId_map_Party_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyExpense_PayeeId_map_Party_Id_N_1</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyExpense_PayeeId_map_Party_Id_N_1</relationshipLabel>
        <relationshipName>PartyExpense_PayeeId_map_Party_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__PartyExpense_PayerId_map_Party_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyExpense_PayerId_map_Party_Id_N_1</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyExpense_PayerId_map_Party_Id_N_1</relationshipLabel>
        <relationshipName>PartyExpense_PayerId_map_Party_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__PayeeId__c</fullName>
        <label>Payee</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PayerId__c</fullName>
        <label>Payer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
</CustomObject>